@@ -86,7 +86,7 @@ public class ScrollTextView extends android.support.v7.widget.AppCompatTextView 
 
         int scrollingLen = calculateScrollingLen();
         int distance = scrollingLen - (getWidth() + mXPaused);
-        int duration = (new Double(mRndDuration * distance * 1.00000
+        int duration = (Double.valueOf(mRndDuration * distance * 1.00000
                 / scrollingLen)).intValue();
 
         setVisibility(VISIBLE);
